# pyspur

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  Dockerfile.socket  LICENSE  README.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KR.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-compose2.dev.yml  docker-install.sh  env.example  generate_migrations.sh  requirements.txt  start_pyspur_docker.sh  tsconfig.json
backend/: .dockerignore  .gitignore  Dockerfile  README.MD  alembic.ini  entrypoint.sh  example_merge.json  example_router.json  nodes.py  pyproject.toml  requirements.txt  test_ollama.sh
backend/.github/workflows/: tests.yml
backend/api/: main.py  models.py
backend/app/: database.py
backend/app/api/: dataset_management.py  datasets.py  evals_management.py  file_management.py  key_management.py  main.py  node_management.py  openai_compatible_api.py  rag_management.py  (+7 more)
backend/monitoring/: manager.py  models.py
backend/node_types/: __init__.py  base.py  example_node.py  image_gen.py  llm.py  llm_utils.py  python_func.py
backend/nodes/: __init__.py  base.py  example_node.py  image_gen.py  llm.py  loader.py  node_registry.py  writers.py
backend/pyspur/: cli.py  database.py
backend/scripts/: repair_socket_workers.py
backend/templates/: gpqa_solver.json  joke_generator.json  ollama_model_comparison.json
backend/tests/: README.md  __init__.py  conftest.py
backend/trigger/: time_scheduler.py
(+703 files in other folders)
