[tool.poetry]
name = "pyspur"
version = "0.1.0"
description = "AI Workflow Builder"
authors = ["Jean Kaddour <jean.kaddour@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
numpy = "^2.1.1"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
openai = "^1.47.1"
scikit-learn = "^1.5.2"
tenacity = "^9.0.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
